force-app/main/default/objects/Lead/fields/ZI_Person_Looks_like_EU__c.field-meta.xml
<CustomField>
    <fullName>ZI_Person_Looks_like_EU__c</fullName>
    <label>ZI Person Looks like EU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>