force-app/main/default/objects/Lead/fields/ZI_Person_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>ZI_Person_Profile_URL__c</fullName>
    <label>ZI Person Profile URL</label>
    <type>Url</type>
</CustomField>