force-app/main/default/objects/Lead/fields/ZI_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>ZI_Revenue_Range__c</fullName>
    <label>ZI Revenue Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>