force-app/main/default/objects/Lead/fields/ZI_Street__c.field-meta.xml
<CustomField>
    <fullName>ZI_Street__c</fullName>
    <label>ZI Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>