force-app/main/default/objects/Lead/fields/ZI_Title__c.field-meta.xml
<CustomField>
    <fullName>ZI_Title__c</fullName>
    <label>ZI Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>