force-app/main/default/objects/Lead/fields/ZI_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>ZI_Zip_Code__c</fullName>
    <label>ZI Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>