force-app/main/default/objects/Lead/fields/ZoomInfo_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Company_ID__c</fullName>
    <label>ZoomInfo Company ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>