force-app/main/default/objects/Lead/recordTypes/Call_Center_Lead.recordType-meta.xml
<RecordType>
    <fullName>Call_Center_Lead</fullName>
    <active>true</active>
    <businessProcess>Call Center Lead</businessProcess>
    <label>Call Center Lead</label>
</RecordType>