force-app/main/default/objects/Lead/recordTypes/Pardot_Generated_Lead.recordType-meta.xml
<RecordType>
    <fullName>Pardot_Generated_Lead</fullName>
    <active>true</active>
    <businessProcess>Call Center Lead</businessProcess>
    <description>Lead record type for Pardot leads only</description>
    <label>Pardot Generated Lead</label>
</RecordType>