force-app/main/default/objects/Lead/listViews/Albuquerque_Web_To_Leads.listView-meta.xml
<ListView>
    <fullName>Albuquerque_Web_To_Leads</fullName>
    <filterScope>Queue</filterScope>
    <label>Albuquerque Web-To-Leads</label>
    <queue>Albuquerque_Web_To_Leads</queue>
    <sharedTo>
        <role>Information_Technology</role>
        <role>Phoenix_Branch</role>
    </sharedTo>
</ListView>