force-app/main/default/objects/Lead/listViews/Approved_Leads_Awaiting_Conversion.listView-meta.xml
<ListView>
    <fullName>Approved_Leads_Awaiting_Conversion</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Dead</value>
    </filters>
    <label>Approved Leads Awaiting Conversion</label>
    <sharedTo>
        <group>Lead_Testers</group>
    </sharedTo>
</ListView>