force-app/main/default/objects/Lead/listViews/CC_Leads_Ready_to_Convert_Lead.listView-meta.xml
<ListView>
    <fullName>CC_Leads_Ready_to_Convert_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>CC - Leads Ready to Convert</label>
    <queue>CC_Leads_Ready_to_Convert</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>