force-app/main/default/objects/Lead/listViews/Chicago_Web_To_Leads.listView-meta.xml
<ListView>
    <fullName>Chicago_Web_To_Leads</fullName>
    <filterScope>Queue</filterScope>
    <label>Chicago Branch</label>
    <queue>Chicago_Web_To_Leads</queue>
    <sharedTo>
        <role>Chicago_Branch</role>
        <role>Information_Technology</role>
    </sharedTo>
</ListView>