force-app/main/default/objects/Lead/listViews/Contact_Center_Ready_to_Convert.listView-meta.xml
<ListView>
    <fullName>Contact_Center_Ready_to_Convert</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Contact Center - Ready to Convert</label>
    <queue>CC_Leads_Ready_to_Convert</queue>
    <sharedTo>
        <roleAndSubordinates>Call_Center</roleAndSubordinates>
    </sharedTo>
</ListView>