force-app/main/default/objects/Lead/listViews/Corporate_Office_Web_To_Leads.listView-meta.xml
<ListView>
    <fullName>Corporate_Office_Web_To_Leads</fullName>
    <filterScope>Queue</filterScope>
    <label>Corporate Office</label>
    <queue>Corporate_Office_Web_To_Leads</queue>
    <sharedTo>
        <role>Corporate_Office</role>
        <role>Information_Technology</role>
    </sharedTo>
</ListView>