force-app/main/default/objects/Lead/listViews/Dallas_Web_To_Leads.listView-meta.xml
<ListView>
    <fullName>Dallas_Web_To_Leads</fullName>
    <filterScope>Queue</filterScope>
    <label>Dallas Branch</label>
    <queue>Dallas_Web_To_Leads</queue>
    <sharedTo>
        <role>Dallas_Branch</role>
        <role>Information_Technology</role>
    </sharedTo>
</ListView>