force-app/main/default/objects/Lead/listViews/Las_Vegas_Web_To_Leads.listView-meta.xml
<ListView>
    <fullName>Las_Vegas_Web_To_Leads</fullName>
    <filterScope>Queue</filterScope>
    <label>Las Vegas Branch</label>
    <queue>Las_Vegas_Web_To_Leads</queue>
    <sharedTo>
        <role>Information_Technology</role>
        <role>Las_Vegas_Branch</role>
    </sharedTo>
</ListView>