force-app/main/default/objects/Lead/listViews/Leads_without_submittal_dates.listView-meta.xml
<ListView>
    <fullName>Leads_without_submittal_dates</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Dead</value>
    </filters>
    <label>Leads without submittal dates</label>
    <sharedTo>
        <group>Lead_Testers</group>
    </sharedTo>
</ListView>