force-app/main/default/objects/Lead/listViews/Los_Angeles_Web_To_Leads.listView-meta.xml
<ListView>
    <fullName>Los_Angeles_Web_To_Leads</fullName>
    <filterScope>Queue</filterScope>
    <label>Los Angeles Branch</label>
    <queue>Los_Angeles_Web_To_Leads</queue>
    <sharedTo>
        <role>Information_Technology</role>
        <role>Los_Angeles_Branch</role>
    </sharedTo>
</ListView>