force-app/main/default/objects/Lead/listViews/Multi_Family_Email.listView-meta.xml
<ListView>
    <fullName>Multi_Family_Email</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>Multi-Family Email</label>
    <sharedTo>
        <roleAndSubordinates>Marketing_Communications_VP_HQ</roleAndSubordinates>
        <roleAndSubordinates>Marketing_VP_Corporate</roleAndSubordinates>
        <roleAndSubordinates>Marketing_VP_Eastern</roleAndSubordinates>
    </sharedTo>
</ListView>