force-app/main/default/objects/Lead/listViews/New_England_Web_To_Leads.listView-meta.xml
<ListView>
    <fullName>New_England_Web_To_Leads</fullName>
    <filterScope>Queue</filterScope>
    <label>New England Branch</label>
    <queue>New_England_Web_To_Leads</queue>
    <sharedTo>
        <role>Information_Technology</role>
        <role>New_England_Branch</role>
    </sharedTo>
</ListView>