force-app/main/default/objects/Lead/listViews/Phoenix_Web_To_Leads.listView-meta.xml
<ListView>
    <fullName>Phoenix_Web_To_Leads</fullName>
    <filterScope>Queue</filterScope>
    <label>Phoenix Branch</label>
    <queue>Phoenix_Web_To_Leads</queue>
    <sharedTo>
        <role>Information_Technology</role>
        <role>Phoenix_Branch</role>
    </sharedTo>
</ListView>